--- a/index.html
+++ b/index.html
@@ -19,24 +19,72 @@
     Tic Tac Toe
   </header>
   <main class="main">
-    <table class="main__board">
-      <tr>
-        <td class="cell cell_first">
-        </td>
-        <td class="cell cell_second"></td>
-        <td class="cell cell_third"></td>
-      </tr>
-      <tr>
-        <td class="cell cell_fourth"></td>
-        <td class="cell cell_fiveth"></td>
-        <td class="cell cell_sixth"></td>
-      </tr>
-      <tr>
-        <td class="cell cell_seventh"></td>
-        <td class="cell cell_eighth"></td>
-        <td class="cell cell_nineth"></td>
-      </tr>
-    </table>
+    <section class="main__section">
+      <table class="main__board">
+        <tr>
+          <td class="cell cell_first">
+          </td>
+          <td class="cell cell_second"></td>
+          <td class="cell cell_third"></td>
+        </tr>
+        <tr>
+          <td class="cell cell_fourth"></td>
+          <td class="cell cell_fiveth"></td>
+          <td class="cell cell_sixth"></td>
+        </tr>
+        <tr>
+          <td class="cell cell_seventh"></td>
+          <td class="cell cell_eighth"></td>
+          <td class="cell cell_nineth"></td>
+        </tr>
+      </table>
+      <table class="main__table">
+        <thead>
+          <td>№:</td>
+          <td>Winner:</td>
+        </thead>
+        <tr>
+          <td>1</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>-</td>
+        </tr>
+      </table>
+    </section>
     <button class="reset-button">Reset the Game</button>
   </main>
   <footer class="footer">
