--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@
         </thead>
         <tr>
           <td>1</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
-        <tr>
+        <!-- <tr>
           <td>4</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>6</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>7</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>8</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>9</td>
-          <td>-</td>
+          <td class="winner">-</td>
         </tr>
         <tr>
           <td>10</td>
-          <td>-</td>
-        </tr>
+          <td class="winner">-</td>
+        </tr> -->
       </table>
     </section>
     <button class="reset-button">Reset the Game</button>
